# mango3

./: .env.example  .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  nginx-config-example  package-lock.json  package.json  tailwind.config.js
mango3-core/: Cargo.toml
mango3-core/src/: config.rs  constants.rs  enums.rs  info.rs  jobs.rs  lib.rs  locales.rs  pagination.rs  test_utils.rs  validator.rs
mango3-core/src/commands/: hashtag_all.rs  hashtag_get.rs  hashtag_insert.rs  invitation_code_delete.rs  invitation_code_get.rs  invitation_code_insert.rs  mod.rs  navigation_item_all.rs  navigation_item_get.rs  navigation_item_write.rs  post_reaction_count.rs  post_reaction_delete.rs  post_reaction_get.rs  post_reaction_insert.rs  post_view_count.rs  post_view_insert.rs  user_session_all.rs  user_session_delete.rs  user_session_get.rs
mango3-core/src/config/: basic_config.rs  mailer_config.rs  misc_config.rs  mod.rs  user_config.rs  website_config.rs
mango3-core/src/models/: confirmation_code.rs  hashtag.rs  invitation_code.rs  mod.rs  post_attachment.rs  post_reaction.rs  post_view.rs  user_password_reset.rs  user_session.rs
mango3-core/src/models/blob/: blob_delete.rs  blob_get.rs  blob_insert.rs  blob_paginate.rs  blob_read.rs  mod.rs
mango3-core/src/models/navigation_item/: mod.rs  navigation_item_all.rs  navigation_item_insert.rs  navigation_item_save_all.rs  navigation_item_update.rs
mango3-core/src/models/page/: mod.rs  page_insert.rs  page_paginate.rs  page_update.rs
mango3-core/src/models/post/: mod.rs  post_content.rs  post_delete.rs  post_get.rs  post_insert.rs  post_paginate.rs  post_search.rs  post_update.rs
mango3-core/src/models/post_comment/: mod.rs  post_comment_content.rs  post_comment_paginate.rs
mango3-core/src/models/user/: mod.rs  user_all.rs  user_bio.rs  user_disable.rs  user_email.rs  user_get.rs  user_insert.rs  user_lock.rs  user_login.rs  user_paginate.rs  user_password.rs  user_profile.rs  user_role.rs
mango3-core/src/models/website/: mod.rs  website_delete.rs  website_description.rs  website_get.rs  website_insert.rs  website_paginate.rs  website_search.rs  website_update.rs
mango3-core/src/test_utils/: mod.rs  test_blob.rs  test_post.rs  test_post_comment.rs
mango3-core/src/utils/: handlebars_utils.rs  mod.rs  text_icon.rs
mango3-leptos-utils/: Cargo.toml  build.rs
mango3-leptos-utils/src/: constants.rs  context.rs  enums.rs  icons.rs  lib.rs  macros.rs  models.rs  server_functions.rs  ssr.rs  utils.rs
mango3-leptos-utils/src/components/: action_form_alert.rs  alert_dialog.rs  alert_modal.rs  app_provider.rs  authentication.rs  basic_config_resource.rs  bottom_bar.rs  brand.rs  confirmation_dialog.rs  confirmation_modal.rs  copyable_text.rs  country_field.rs  current_user.rs  current_user_resource.rs  hashtags.rs  image_upload_field.rs  infinite_scroll.rs  loading_overlay.rs  loading_spinner.rs  menu.rs  mod.rs  modal.rs  multiple_image_upload_field.rs  page_card.rs  password_field.rs  post_bottom_bar.rs  post_card.rs  search_bar.rs  submit_button.rs  switch_field.rs  text_field.rs  textarea_field.rs  time_ago.rs  top_bar.rs  user_card.rs  user_tag.rs  website_card.rs
mango3-leptos-utils/src/components/forms/: country_field.rs  markdown_editor_field.rs  mod.rs  multiple_image_upload_field.rs  password_field.rs  switch_field.rs  text_field.rs  textarea_field.rs
mango3-leptos-utils/src/context/: mod.rs  use_color_mode.rs  use_language_cookie.rs
mango3-leptos-utils/src/icons/: arrow.rs  bars.rs  chevron.rs  document.rs  exclamation.rs  eye.rs  home.rs  image.rs  information_circle.rs  link.rs  magnifying_glass.rs  mod.rs  users.rs
mango3-leptos-utils/src/models/: action_form_resp.rs  basic_config_resp.rs  blob_resp.rs  hashtag_resp.rs  info_resp.rs  mod.rs  navigation_item_resp.rs  page_resp.rs  post_comment_resp.rs  post_resp.rs  user_profile_resp.rs  user_resp.rs  website_resp.rs
mango3-leptos-utils/src/pages/: mod.rs  not_found_page.rs
mango3-leptos-utils/src/server_functions/: image_upload.rs  mod.rs
mango3-leptos-utils/src/ssr/: handlebars_utils.rs  markdown.rs  mod.rs  user_sessions.rs
mango3-monitor/: Cargo.toml
mango3-monitor/src/: constants.rs  main.rs
mango3-monitor/src/workers/: admin_mailer_worker.rs  guest_mailer_worker.rs  mailer_worker.rs  mod.rs  scheduled_worker.rs
mango3-utils/: Cargo.toml
mango3-utils/src/models/: cursor_page.rs  hashtag.rs  invitation_code.rs  mod.rs  navigation_item.rs  post_view.rs  user_session.rs
mango3-websites/: Cargo.toml
mango3-websites/end2end/: playwright.config.ts
mango3-websites/src/: app.rs  components.rs  context.rs  lib.rs  main.rs  server_functions.rs
mango3-websites/src/components/: highlight_code.rs  mod.rs  post_comments.rs  post_reactions.rs  website_top_bar.rs
mango3-websites/src/pages/: index_page.rs  mod.rs  search_page.rs  show_hashtag_page.rs  show_page_page.rs  show_post_page.rs
mango3-websites/src/server_functions/: mod.rs  post_comments.rs  post_reactions.rs  posts.rs
packs/mango3-core/: Cargo.toml
packs/mango3-core/src/: constants.rs  enums.rs  lib.rs
packs/mango3-core/src/commands/: blob_commands.rs  confirmation_code_commands.rs  hashtag_commands.rs  invitation_code_commands.rs  mod.rs  navigation_item_commands.rs  post_commands.rs  post_comment_commands.rs  post_reaction_commands.rs  post_view_commands.rs  user_commands.rs  user_session_commands.rs  user_session_insert.rs  website_commands.rs
packs/mango3-core/src/config/: basic_config.rs  cache_config.rs  jobs_config.rs  mailer_config.rs  misc_config.rs  mod.rs  user_config.rs  website_config.rs
packs/mango3-core/src/models/: blob.rs  confirmation_code.rs  (+9 more)
packs/mango3-uploads/: Cargo.toml
packs/mango3-uploads/src/: main.rs
webpacks/mango3-accounts/: Cargo.toml  Dioxus.toml
webpacks/mango3-accounts/end2end/: playwright.config.ts
webpacks/mango3-accounts/src/: app.rs  main.rs  routes.rs  server_functions.rs
webpacks/mango3-web-utils/: Cargo.toml
webpacks/mango3-web-utils/src/: constants.rs  enums.rs  hooks.rs  lib.rs  providers.rs
(+450 files in other folders)
