[workspace]
resolver = "2"
members = [
    "mango3-accounts",
    "mango3-admin",
    "mango3-cli",
    "mango3-core",
    "mango3-home",
    "mango3-leptos-utils",
    "mango3-my-account",
    "mango3-monitor",
    "mango3-studio",
    "mango3-uploads",
    "mango3-websites",
]

[workspace.package]
edition = "2021"
version = "0.0.0-alpha.15"

[workspace.dependencies]
apalis = "0.6.4"
apalis-redis = "0.6.4"
async-trait = "0.1.87"
axum = "0.7.9"
chrono = {version = "0.4.40", features = ["serde"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
leptos = "0.7.7"
leptos_axum = "0.7.7"
leptos_i18n = { version = "0.5.8", default-features = false, features = [
    "cookie",
    "dynamic_load",
    "interpolate_display",
    "track_locale_files",
    "yaml_files",
] }
leptos_meta = "0.7.7"
leptos_router = "0.7.7"
leptos-use = { version = "0.15.6", default-features = false }
regex = "1.11.1"
rust_iso3166 = "0.1.14"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
server_fn = "0.7.7"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
mango3-core = { path = "mango3-core", default-features = false, features = ["validator"] }
mango3-leptos-utils = { path = "mango3-leptos-utils" }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
