[workspace]
resolver = "2"
members = [
    "packs/mango3-core",
    "packs/mango3-cli",
    "packs/mango3-monitor",
    "packs/mango3-uploads",
    "webpacks/mango3-admin",
    "webpacks/mango3-accounts",
    "webpacks/mango3-home",
    "webpacks/mango3-my-account",
    "webpacks/mango3-studio",
    "webpacks/mango3-web-utils",
    "webpacks/mango3-websites",

]

[workspace.package]
edition = "2021"
version = "0.0.0-alpha.18"

[workspace.dependencies]
apalis = "0.7.0"
apalis-redis = "0.7.0"
async-trait = "0.1.88"
axum = "0.7.9"
chrono = {version = "0.4.40", features = ["serde"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
ipnetwork = "0.20.0"
leptos = "0.7.8"
leptos_axum = "0.7.8"
leptos_i18n = { version = "0.5.11", default-features = false, features = [
    "cookie",
    "dynamic_load",
    "interpolate_display",
    "track_locale_files",
    "yaml_files",
] }
leptos_meta = "0.7.8"
leptos_router = "0.7.8"
leptos-use = { version = "0.15.7", default-features = false }
regex = "1.11.1"
rust_iso3166 = "0.1.14"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
server_fn = "0.7.8"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
url = { version = "2.5.4", features = ["serde"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
mango3-core = { path = "packs/mango3-core", default-features = false, features = ["validator"] }
mango3-web-utils = { path = "webpacks/mango3-web-utils" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
