[package]
name = "mango3-core"
version.workspace = true
edition.workspace = true

[dependencies]
ab_glyph = { version = "0.2.29", optional = true }
argon2 = "0.5.3"
apalis = { workspace = true }
apalis-redis = { workspace = true }
attohttpc = { version = "0.28.5", features = ["charsets",  "json"] }
cached = { version = "0.54.0", features = ["async", "redis_store", "redis_tokio"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
fluent-templates = { version = "0.13.0", optional = true }
fluent-bundle = { version = "0.15.3", optional = true }
futures-util = "0.3.31"
futures = { workspace = true }
env_logger = "0.11.6"
handlebars = { version = "6.3.1", features = ["no_logging"] }
handlebars_misc_helpers = { version = "0.17.0", default-features = false, features = ["json", "jsontype", "string"] }
image = { version = "0.25.5", optional = true }
imageproc = { version = "0.25.0", optional = true }
md-5 = "0.10.6"
mime = "0.3.17"
multer = { version = "3.1.0", optional = true }
pulldown-cmark = "0.13.0"
rand = "0.9.0"
regex = { workspace = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.3", features = ["chrono", "ipnetwork", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
strum = { version = "0.27.1", features = ["derive"] }
unic-langid = { version = "0.9.5", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
fake = { version = "4.0.0", features = ["chrono", "url"] }
tokio = { workspace = true }

[features]
locales = ["dep:fluent-templates", "dep:fluent-bundle"]
validator = ["locales"]
blob_read = ["dep:ab_glyph", "dep:image", "dep:imageproc"]
blob_write = ["dep:multer", "validator"]
