[package]
name = "mango3-core"
version.workspace = true
edition.workspace = true

[dependencies]
ab_glyph = { version = "0.2.29", optional = true }
argon2 = "0.5.3"
apalis = { workspace = true }
apalis-redis = { workspace = true }
attohttpc = { version = "0.29.2", features = ["charsets",  "json"], optional = true }
cached = { version = "0.55.1", features = ["async", "redis_store", "redis_tokio"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
fluent-templates = { version = "0.13.0", optional = true }
fluent-bundle = { version = "0.15.3", optional = true }
futures-util = "0.3.31"
futures = { workspace = true }
env_logger = "0.11.7"
handlebars = { version = "6.3.2", features = ["no_logging"], optional = true}
handlebars_misc_helpers = { version = "0.17.0", default-features = false, features = [
    "json", "jsontype", "string"
], optional = true }
image = { version = "0.25.5", optional = true }
imageproc = { version = "0.25.0", optional = true }
ipnetwork = { workspace = true, optional = true }
md-5 = "0.10.6"
mime = "0.3.17"
multer = { version = "3.1.0", optional = true }
pulldown-cmark = { version = "0.13.0", optional = true }
rand = "0.9.0"
regex = { workspace = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
size = { version = "0.5.0", features = ["serde"], optional = true }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
strum = { version = "0.27.1", features = ["derive"] }
unic-langid = { version = "0.9.5", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { workspace = true }
mango3-utils = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
fake = { version = "4.0.0", features = ["chrono", "url"] }
tokio = { workspace = true }

[features]
handlebars = ["dep:attohttpc", "dep:handlebars", "dep:handlebars_misc_helpers"]
locales = ["dep:fluent-templates", "dep:fluent-bundle"]
markdown = ["dep:pulldown-cmark"]
validator = ["locales"]
blob_delete = []
blob_insert = ["dep:multer", "validator"]
blob_paginate = []
blob_read = ["dep:ab_glyph", "dep:image", "dep:imageproc"]
invitation_code_delete = ["mango3-utils/invitation_code"]
invitation_code_get = ["mango3-utils/invitation_code"]
invitation_code_insert = ["mango3-utils/invitation_code"]
post_cache_remove = ["post_content_html", "post_content_preview_html"]
post_comment_content_html = ["markdown"]
post_comment_cache_remove = ["post_comment_content_html"]
post_reaction_count = ["mango3-utils/post_reaction"]
post_reaction_delete = ["mango3-utils/post_reaction"]
post_reaction_get = ["mango3-utils/post_reaction"]
post_reaction_insert = ["mango3-utils/post_reaction"]
post_view_count = ["mango3-utils/post_view"]
post_view_insert = ["dep:ipnetwork", "sqlx/ipnetwork", "mango3-utils/post_view"]
post_content_html = ["handlebars", "markdown"]
post_content_preview_html = ["markdown"]
post_write = ["post_cache_remove"]
user_bio_html = ["markdown"]
user_bio_preview_html = ["markdown"]
user_cache_remove = ["user_bio_html", "user_bio_preview_html", "user_session_delete"]
user_session_all = ["mango3-utils/user_session"]
user_session_delete = ["mango3-utils/user_session", "user_session_all", "user_session_get"]
user_session_get = ["mango3-utils/user_session"]
user_session_insert = ["mango3-utils/user_session"]
website_cache_remove = ["website_description_html", "website_description_preview_html"]
website_description_html = ["markdown"]
website_description_preview_html = ["markdown"]
website_storage = ["size"]
website_write = ["website_cache_remove"]
