[package]
name = "mango3-leptos-utils"
version.workspace = true
edition.workspace = true

[dependencies]
accept-language = { version = "3.1.0", optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
codee = "0.2"
cookie = { version = "0.18.1", optional = true, features = ["private"] }
default-struct-builder = "0.5"
fred = { version = "10.0.0", optional = true }
futures = { version = "0.3.31", optional = true }
http = { version = "1.1.0", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_i18n = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true, features = ["use_color_mode", "use_infinite_scroll", "use_textarea_autosize"] }
pulldown-cmark = { version = "0.12.2", optional = true }
rust_iso3166 = { workspace = true, optional = true }
serde = { workspace = true }
server_fn = { workspace = true, features = ["multipart"] }
time = { version = "0.3.36", optional = true }
tower-sessions =  { version = "0.13.0", optional = true,  features = ["private"] }
tower-sessions-redis-store = { version = "0.14.0", optional = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3.72", features = ["File", "FileList"] }
mango3-core = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate"]
ssr = [
    "dep:accept-language",
    "dep:async-trait",
    "dep:axum",
    "dep:cookie",
    "dep:fred",
    "dep:futures",
    "dep:http",
    "dep:leptos_axum",
    "dep:pulldown-cmark",
    "dep:rust_iso3166",
    "dep:time",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:uuid",
    "dep:mango3-core",
    "leptos/ssr",
    "leptos_i18n/ssr",
    "leptos_meta/ssr",
    "leptos-use/axum",
    "leptos-use/ssr",
]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "es"]
namespaces = ["accounts", "home", "my_account", "shared", "studio", "websites"]
locales-dir = "../locales/leptos"
