[package]
name = "mango3-leptos-utils"
version.workspace = true
edition.workspace = true

[dependencies]
accept-language = { version = "3.1.0", optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-client-ip = { version = "0.6.1", optional = true }
chrono = { workspace = true }
codee = "0.3.0"
cookie = { version = "0.18.1", optional = true, features = ["private"] }
default-struct-builder = "0.5"
fred = { version = "10.1.0", optional = true }
futures = { workspace = true, optional = true }
http = { version = "1.3.1", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_i18n = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true, features = [
    "use_clipboard",
    "use_color_mode",
    "use_infinite_scroll",
    "use_interval_fn",
] }
regex = { workspace = true, optional = true }
rust_iso3166 = { workspace = true, optional = true }
serde = { workspace = true }
server_fn = { workspace = true }
time = { version = "0.3.40", optional = true }
tower-sessions =  { version = "0.13.0", optional = true,  features = ["private"] }
tower-sessions-redis-store = { version = "0.15.0", optional = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
mango3-core = { workspace = true, optional = true, features = ["user_session_get"] }
mango3-utils = { workspace = true }

[features]
forms = ["leptos-use/use_textarea_autosize"]
image_upload = ["forms", "web-sys/File", "web-sys/FileList", "server_fn/multipart", "mango3-core?/blob_insert"]
markdown_editor = ["forms", "web-sys/HtmlDocument", "web-sys/HtmlTextAreaElement", "web-sys/KeyboardEvent"]
multiple_image_upload = ["image_upload"]
post_card = ["post_content_preview_html", "post_reaction_count", "post_view_count"]
blob_delete = ["mango3-core?/blob_delete"]
post_comment_content_html = ["mango3-core?/post_comment_content_html"]
post_content_html = ["mango3-core?/post_content_html"]
post_content_preview_html = ["mango3-core?/post_content_preview_html"]
post_reaction_count = ["mango3-core?/post_reaction_count"]
post_view_count = ["mango3-core?/post_view_count"]
user_bio_html = ["mango3-core?/user_bio_html"]
user_bio_preview_html = ["mango3-core?/user_bio_preview_html"]
user_card = ["user_bio_preview_html"]
user_session_delete = ["mango3-core?/user_session_delete"]
user_session_insert = ["mango3-core?/user_session_insert"]
website_card = ["website_description_preview_html"]
website_description_html = ["mango3-core?/website_description_html"]
website_description_preview_html = ["mango3-core?/website_description_preview_html"]
website_storage = ["mango3-core?/website_storage"]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate"]
ssr = [
    "dep:accept-language",
    "dep:async-trait",
    "dep:axum",
    "dep:axum-client-ip",
    "dep:cookie",
    "dep:fred",
    "dep:futures",
    "dep:http",
    "dep:leptos_axum",
    "dep:regex",
    "dep:rust_iso3166",
    "dep:time",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:uuid",
    "dep:mango3-core",
    "leptos/ssr",
    "leptos_i18n/ssr",
    "leptos_meta/ssr",
    "leptos-use/axum",
    "leptos-use/ssr",
]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "es", "pt"]
namespaces = ["accounts", "admin", "home", "my_account", "shared", "studio", "websites"]
locales-dir = "../locales/leptos"
