[package]
name = "mango3-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
apalis = { workspace = true, features = ["limit"] }
lettre = { version = "0.11.11", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
log = "0.4.22"
tokio = { workspace = true, features = ["signal"] }
mango3-core = { workspace = true }
