[package]
name = "mango3-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.96"
apalis = { workspace = true, features = ["limit"] }
apalis-cron = "0.6.4"
chrono = { workspace = true }
lettre = { version = "0.11.14", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
log = "0.4.22"
tokio = { workspace = true, features = ["signal"] }
mango3-core = { workspace = true }
