[package]
name = "mango3-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.97"
apalis = { workspace = true, features = ["limit"] }
apalis-cron = "0.7.0"
chrono = { workspace = true }
lettre = { version = "0.11.15", features = [
    "smtp-transport",
    "tokio1-native-tls",
] }
log = "0.4.27"
tokio = { workspace = true, features = ["signal"] }
mango3-core = { workspace = true, features = ["blob_delete"] }
