[package]
name = "mango3-utils"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
ipnetwork = { workspace = true, optional = true }
serde = { workspace = true }
uuid = { workspace = true, optional = true }

[features]
post_reaction = ["dep:uuid"]
post_view = ["dep:ipnetwork", "dep:uuid"]
